@@ -1,3 +1,10 @@
+2008-10-08  Neal H. Walfield  <neal@gnu.org>
+
+	* rm.h (enum rm_method_id): Add RM_read.
+	(rm_method_id_string): Handle it.
+	(read): New RPC.
+	* server.c (server_loop): Implement the read RPC.
+
 2008-08-15  Neal H. Walfield  <neal@gnu.org>
 
 	* server.c (server_loop): In the implementation of cap_read, if
